Login page with validation done

--- a/www/views/Login.html
+++ b/www/views/Login.html
@@ -1,7 +1,18 @@
-<form role="form" style="margin: 0 auto; width: 80%; margin-top: 80%;" ng-controller="LoginController">
+<form role="form" name="loginForm"
+	style="margin: 0 auto; width: 80%; margin-top: 80%;"
+	ng-controller="LoginController" novalidate ng-submit="OnSubmitLoginForm('/accountList')">
+	
 	<div class="form-group">
-		<label for="securityCode">Enter Security Code:</label> <input
-			type="password" class="form-control" id="securityCode"/>
+		<label for="securityCode">Enter Security Code:</label> 
+		<input type="password" name="securePin" class="form-control" 
+		ng-minlength="4" ng-maxlength="4" ng-model="securePin" 
+		pattern="^[0-9]+$" required >
+
+	<span ng-show="loginForm.securePin.$error.required && loginForm.securePin.$dirty">PIN required</span>
+   <span ng-show="!loginForm.securePin.$error.required && (loginForm.securePin.$error.minlength || loginForm.securePin.$error.maxlength) && loginForm.securePin.$dirty">PIN must be 4 digits.</span>
+   <span ng-show="!loginForm.securePin.$error.required && !loginForm.securePin.$error.minlength && !loginForm.securePin.$error.maxlength && loginForm.securePin.$error.pattern && loginForm.securePin.$dirty"
+   >Enter digits only(number)</span>
+
 	</div>
-	<button type="submit" class="btn btn-primary" style="width: 100%;" ng-click="OnLoginBtnClicked('/accountList')">Submit</button>
+	<button type="submit" class="btn btn-primary" style="width: 100%;" ng-disabled="!loginForm.$valid">Login</button>
 </form>
