sowing account list from stored data implemented

--- a/www/views/AccountList.html
+++ b/www/views/AccountList.html
@@ -3,7 +3,7 @@
 
 <div id="acountList" style="margin-top: 51px;">
 	<ul class="list-group">
-		<li class="list-group-item"	ng-repeat="account in accountList.accountData">{{account.accountName}} 
+		<li class="list-group-item"	ng-repeat="account in accountList">{{account.accountName}} 
 			 <span class="glyphicon glyphicon-trash icon-angle-right pull-right"></span>
 		</li>
 	</ul>
