--- a/www/views/AccountList.html
+++ b/www/views/AccountList.html
@@ -4,7 +4,7 @@
 <div id="acountList" style="margin-top: 51px;">
 	<ul class="list-group">
 		<li class="list-group-item"	ng-repeat="account in accountList" ng-click="onAcountClick($index)">{{account.accountName}} 
-			 <span class="glyphicon glyphicon-trash icon-angle-right pull-right"></span>
+			 <span class="glyphicon glyphicon-trash icon-angle-right pull-right" ng-click="deleteAccount($index)"></span>
 		</li>
 	</ul>
 </div>
